# mle_star

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PROMPT_build.md  pyproject.toml
.claude/skills/create-skill/: init_skill.py  validate_skill.py
.claude/skills/developing-python/scripts/: check_types.py
.claude/skills/writing-requirements/scripts/: validate_srs.py  writing_requirements_helper.py
configs/: config_example.yaml
docs/: README.md
scripts/: arxiv_cli.py
src/mle_star/: __init__.py  __main__.py  cli.py  execution.py  finalization.py  models.py  orchestrator.py  phase1.py  phase2_inner.py  phase2_outer.py  phase3.py  safety.py  scoring.py  validation.py
src/mle_star/prompts/: __init__.py  ablation.yaml  baseline.yaml  coder.yaml  data.yaml  debugger.yaml  ens_planner.yaml  ensembler.yaml  extractor.yaml  init.yaml  leakage.yaml  merger.yaml  planner.yaml  researcher.yaml  retriever.yaml  summarize.yaml  test.yaml  validator.yaml
tasks/: task_example.yaml
tests/: conftest.py  test_cli.py  test_conftest_infra.py  test_execution_async.py  test_execution_constraints.py  test_execution_env.py  test_execution_eval.py  test_execution_output.py  test_execution_script_write.py  test_execution_submission.py  test_execution_subsample.py  test_finalization_constraints.py  test_finalization_contamination.py  test_finalization_subsampling.py  test_finalization_test_submission.py  test_models_agent_config.py  test_models_agents.py  test_models_core.py  test_models_iteration.py  test_models_results.py  test_models_scoring.py  test_models_solution.py  test_orchestrator_config.py  test_orchestrator_constraints.py  test_orchestrator_dispatch.py  test_orchestrator_entry.py  test_orchestrator_hooks.py  test_orchestrator_parallelism.py  test_orchestrator_response_extraction.py  test_orchestrator_results.py  test_orchestrator_time_cost.py  test_phase1_agents.py  test_phase1_baseline.py  test_phase1_constraints.py  test_phase1_orchestration.py  test_phase1_research.py  test_phase1_safety.py  test_phase2_inner_agents.py  test_phase2_inner_constraints.py  test_phase2_inner_loop.py  (+16 more)
thoughts/shared/notes/: claude_agent_sdk_examples.md  claude_agent_sdk_reference.md  mle_star_architecture.md  mle_star_paper.md
thoughts/shared/plan/: IMPLEMENTATION_PLAN.md
thoughts/shared/specs/: 01_data_models_and_interfaces.md  01a_data_models_core.md  01b_data_models_agents_outputs.md  01c_data_models_interfaces.md  01d_data_models_constraints.md  02_execution_harness.md  02a_execution_environment.md  02b_execution_script_operations.md  02c_execution_advanced_operations.md  02d_execution_constraints.md  03_safety_modules.md  03a_safety_debugger.md  03b_safety_leakage.md  03c_safety_data_agent.md  03d_safety_constraints.md  04_phase1_initial_solution.md  04a_phase1_agents.md  04b_phase1_orchestration.md  04c_phase1_nonfunctional.md  04d_phase1_traceability.md  05_phase2_ablation_and_extraction.md  05a_phase2_outer_ablation.md  05b_phase2_outer_agents.md  05c_phase2_outer_orchestration.md  05d_phase2_outer_constraints.md  06_phase2_inner_loop_refinement.md  06a_phase2_inner_agents.md  06b_phase2_inner_orchestration.md  06c_phase2_inner_mechanics.md  06d_phase2_inner_constraints.md  07_phase3_ensemble.md  07a_phase3_agents.md  07b_phase3_orchestration.md  07c_phase3_nonfunctional.md  07d_phase3_traceability.md  08_submission_and_finalization.md  08a_finalization_subsampling.md  08b_finalization_test_submission.md  08c_finalization_contamination.md  08d_finalization_constraints.md  (+5 more)
