[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mle_star"
version = "0.1.0"
description = "Add your description here"
readme = "docs/README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
mle_star = "mle_star.cli:main"

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "hypothesis>=6.151.9",
    "mutmut>=3.4.0",
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "xenon>=0.9.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25.0",
    "pytest-xdist>=3.5.0",
]


[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src/mle_star", "tests"]
extend-exclude = [
  ".git", ".tox", "dist", "build", "*.egg", "venv", "env", ".venv",
  "htmlcov", ".pytest_cache", "__pycache__", "node_modules", "mutants",
  "notebooks",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "N", "SIM", "TCH", "RUF", "D"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "D100",   # Missing docstring in public module (added incrementally)
    "D104",   # Missing docstring in public package
    "D203",   # One blank line before class docstring (conflicts with D211)
    "D213",   # Multi-line docstring summary on second line (conflicts with D212)
]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true


[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = ["src"]
disable_error_code = ["no-any-return", "misc", "import-untyped", "unused-ignore", "untyped-decorator"]
files = ["src/mle_star", "tests"]

[[tool.mypy.overrides]]
module = ["pydantic.*", "yaml"]
ignore_errors = true


[tool.pytest.ini_options]
minversion = "9.0.1"

python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

testpaths = ["tests"]

markers = [
	"unit: Unit tests for individual components (Tier 1)",
	"integration: Integration tests for component interactions (Tier 2)",
	"performance: Performance benchmark tests - latency, memory, throughput (Tier 3)",
	"slow: Tests that take more than 30 seconds to run",
	"asyncio: Async tests using pytest-asyncio",
]

addopts = [
	"-v",
	"-ra",
	"--showlocals",
	"--strict-markers",
	"--durations=10",
	"--cov=mle_star",
	"--cov-report=term-missing",
	"--cov-fail-under=90",
	"--cov-config=pyproject.toml",
]

asyncio_mode = "auto"
log_cli = false

norecursedirs = [
	".git",
	".tox",
	"dist",
	"build",
	"*.egg",
	"venv",
	"env",
	".venv",
	"htmlcov",
	".pytest_cache",
	".hypothesis",
	"__pycache__",
]

filterwarnings = [
	"default",
	"ignore::ImportWarning",
	"ignore::ImportWarning:importlib._bootstrap",
	"ignore::PendingDeprecationWarning",
	"ignore:No data was collected:coverage.exceptions.CoverageWarning",
	"ignore::ResourceWarning",
]

[tool.coverage.run]
source = ["mle_star"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
	"pragma: no cover",
	"if __name__ == .__main__.",
	"if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = [
	".git",
	".tox",
	"dist",
	"build",
	"*.egg",
	"venv",
	"env",
	".venv",
	"htmlcov",
	".pytest_cache",
	"__pycache__",
	"node_modules",
	"tests",
]
skips = [
	"B101",  # Skip assert_used check (common in tests)
	"B404",  # Skip subprocess import check (false positive for safe subprocess usage)
	"B603",  # Skip subprocess without shell=True check (we use list args, which is safe)
]

[tool.mutmut]
paths_to_mutate = ["src/mle_star"]
tests_dir = ["tests"]
pytest_add_cli_args = ["-n", "0", "--no-cov", "-q", "--no-header", "--tb=short"]

[tool.hatch.build.targets.wheel]
packages = ["src/mle_star"]

[tool.radon]
exclude = "tests/*, */__pycache__/*"
show_complexity = true
show_closures = true
order = "SCORE"
